[package]
name = "phoenix-channels"
version = "0.1.3"
authors = ["Alexander Brunner <alex@crashmap.io>"]
description = "A websocket client library for Phoenix channels"
repository = "https://github.com/abrunner94/phoenix_channels_rs"
readme = "README.md"
keywords = ["websocket", "phoenix", "channels", "pubsub", "messaging"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[dependencies]
slog = "2.2.1"
slog-stdlog = "4.1.1"
websocket = "0.26.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
